Fixed the forward expander.